--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 You are now using the latest in next-gen ASCII Raytracing technology.
+
+With some contributions by Lasse Nielsen (lasse@effekts.dk, http://www.effekts.dk)
